results/SVCOMP/2-shot/log-BugTestGen095-2024_03_19_00_47_27.txt
public class BugTestGen095 {
    //@ requires arg != null;
    //@ ensures \result ==> \result.equals("fg");
    public static boolean fun(String arg) {
        StringBuilder sb = new StringBuilder(arg);
        sb.append("Z");
        String s = sb.toString();
        return (s.equals("fg"));
    }
}
/home/max/Documents/JMLGPT/tmp/BugTestGen095.java:3: error: boolean cannot be dereferenced
    //@ ensures \result ==> \result.equals("fg");
                                   ^
1 error

